fix(Link): align icons in flexed standalone container (#1978)

--- a/src/components/Link/Link-v2.module.css
+++ b/src/components/Link/Link-v2.module.css
@@ -34,7 +34,8 @@
  * Contexts
  */
 .link--context-standalone {
-  display: block;
+  display: inline-flex;
+  align-items: center;
 
   &.link--emphasis-default {
     color: var(--eds-theme-color-text-utility-default-primary);
